fix: fixing css responsiveness on smaller screens

--- a/style.css
+++ b/style.css
@@ -46,9 +46,18 @@ body {
   background-color: var(--LightBlue100);
   font-family: "Inter", sans-serif;
   font-weight: 400;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+main {
   display: flex;
   justify-content: space-between;
-  height: 88vh;
+  width: 90%;
+  gap: 2em;
+  align-items: center;
+  margin-top: 2rem;
 }
 
 h1 {
@@ -65,16 +74,16 @@ h1 {
 }
 
 .entrada {
-  height: 75%;
+  height: 100%;
   width: 66%;
-  margin: 40px;
-  margin-top: 80px;
+  gap: 1em;
+  display: flex;
+  flex-direction: column;
 }
 
 .aviso,
 .div-botoes {
   display: flex;
-  margin: 1rem;
   color: var(--gray-400);
   font-size: 0.75rem;
 }
@@ -82,7 +91,6 @@ h1 {
 textarea {
   font-family: "Inter", sans-serif;
   width: 100%;
-  height: 100%;
   padding: 24px;
   color: var(--DarkBlue200);
   font-size: 1.5rem;
@@ -101,7 +109,6 @@ textarea {
 .saida {
   width: 33%;
   height: 100%;
-  margin: 40px;
   border-radius: 32px;
   background-color: var(--White);
   box-shadow: 0px 24px 32px -8px #00000014;
@@ -193,14 +200,16 @@ h2 {
   }
 
   body {
-    flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    height: 100vh;
+  }
+
+  main {
+    flex-direction: column;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
   }
 
   .entrada {
-    align-items: center;
     width: 100%;
     margin: 0;
     margin-top: 20px;
